<resources>
    <string name="app_name">Sonar</string>
    <string name="title_activity_position" translatable="false">PositionActivity</string>
    <string name="action_settings">Settings</string>

    <string name="unregistered">Not registered?</string>
    <string name="signup">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="dob">Date of Birth</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordconfirm">Confirm password</string>
    <string name="profile">Profile</string>
    <string name="position">Position</string>
    <string name="events">Events</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="aboutgroup">Connect with us</string>
    <string name="contact">Contact us</string>
    <string name="website">Visit our website</string>
    <string name="facebooklike">Like us on Facebook</string>
    <string name="twitterfollow">Follow us on Twitter</string>
    <string name="gitfork">Fork us on GitHub</string>
    <string name="instafollow">Follow us on Instagram</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="football">Football</string>
    <string name="sport">Sport</string>
    <string name="music">Music</string>
    <string name="techno" translatable="false">Techno</string>
    <string name="appearance">Appearance</string>
    <string name="update_interval">Update interval</string>
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="your_position">Your position</string>
    <string name="position_permission_denied">To use this app\'s core functionality, you have to enable location access.</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="my_interests">My interests</string>
    <string name="taptoset">Tap to set</string>


</resources>
