<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/profile_img_blur"
        android:src="@drawable/cnv"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_width="50dp"
        android:layout_height="210dp"
        android:layout_alignParentEnd="false"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/cnv"/>
        <!--<ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/profile_img"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginBottom="20dp" />-->

        <LinearLayout
            android:id="@+id/ll_profile_header"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:background="#be000000">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nome"
                android:id="@+id/tvNome"
                android:layout_marginLeft="10dp"
                android:textSize="22dp"
                android:textStyle="bold"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:id="@+id/blankTextView"
                android:textSize="18dp"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cognome"
                android:id="@+id/tvCognome"
                android:layout_marginRight="10dp"
                android:textSize="22dp"
                android:textStyle="bold"
                android:textColor="#ffffff" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sport"
        android:id="@+id/tv_interest_sport"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/profile_img_blur"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/football"
        android:id="@+id/cb_interest_football"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/tv_interest_sport"
        android:layout_alignLeft="@+id/tv_interest_sport"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music"
        android:id="@+id/tv_interest_music"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/cb_interest_football"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/techno"
        android:id="@+id/cb_interest_techno"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/tv_interest_music"
        android:layout_alignLeft="@+id/tv_interest_music"
        android:layout_marginLeft="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btn_submit_interests"
        android:layout_below="@+id/cb_interest_techno"
        android:layout_centerHorizontal="true"
        android:nestedScrollingEnabled="false" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Switch"
        android:id="@+id/switch2"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_centerVertical="true"
        android:splitTrack="false"
        android:switchPadding="20dp"
        android:thumbTint="#ff3d00"
        android:trackTint="@color/about_instagram_color"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/btn_submit_interests"
        android:layout_marginLeft="20dp"
        android:layout_margin="20dp"
        android:trackTintMode="src_atop" />

</RelativeLayout>
